--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <h1></h1>
     <div class="container-flags">
         <table style="border: 2px solid; border-color: black;">
+
+            <!-- Different languages  -->
             <tr>
                 <th>English</th>
                 <th>Deutsch</th>
