--- a/index.html
+++ b/index.html
@@ -53,6 +53,21 @@
         </table>
     </div>
 
+    <!-- Cookie html code from here: -->
+    <div class="cookie-container">
+        <p>
+          We use cookies in this website to give you the best experience on our
+          site and show you relevant ads. To find out more, read our
+          <a href="#">privacy policy</a> and <a href="#">cookie policy</a>.
+        </p>
+  
+        <button class="cookie-btn">
+          Okay
+        </button>
+      </div>
+  
+      <script src="javascript/cookieConsent.js"></script>
+
 </body>
 
 </html>
