--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <!-- Cookie html code from here: -->
     <div class="cookie-container">
         <p>
-          We use cookies in this website to give you the best experience on our
-          site and show you relevant ads. To find out more, read our
+          We use cookies in this website to give you the best experience possible
+          and show you relevant ads. To find out more, read our
           <a href="#">privacy policy</a> and <a href="#">cookie policy</a>.
         </p>
   
