Added information icon

--- a/localized_pages/German/index.html
+++ b/localized_pages/German/index.html
@@ -32,7 +32,7 @@
                             <input type="text" id="fname" name="fname">
                         </td>
                         <td class="info-fields">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent a tristique libero, et tempus ex. Quisque vestibulum arcu at quam venenatis pulvinar. Vivamus nec neque nisl. Nam vestibulum mattis gravida. 
+                            <img src="/images/favicon.png" alt="informationen">
                         </td>
                     </tr>
                     <tr>
