--- a/localized_pages/German/index.html
+++ b/localized_pages/German/index.html
@@ -17,19 +17,10 @@
                     </tr>
                     <tr>
                         <td class="formular-fields">
-                            <label for="male" >Mänlich </label>
-                            <input type="radio" id="male" name="gender" value="Herr"><br>
+                            <label for="male" >Männlich </label>
+                            <input type="radio" id="male" name="gender" value="Herr" required><br>
                             <label for="female">Weiblich</label>
                             <input type="radio" id="female" name="gender" value="Frau"> 
-                        </td>
-                        <td class="info-fields">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent a tristique libero, et tempus ex. Quisque vestibulum arcu at quam venenatis pulvinar. Vivamus nec neque nisl. Nam vestibulum mattis gravida. 
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="formular-fields">
-                            <label for="fname" >Vorname:</label>
-                            <input type="text" id="fname" name="fname">
                         </td>
                         <td class="info-fields">
                             <img src="/images/favicon.png" alt="informationen">
@@ -37,31 +28,30 @@
                     </tr>
                     <tr>
                         <td class="formular-fields">
-                            <label for="lname" >Nachname:</label>
-                            <input type="text" id="lname" name="lname">
+                            <label for="fname" >Vorname:</label>
+                            <input type="text" id="fname" name="fname"  required>
                         </td>
                         <td class="info-fields">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent a tristique libero, et tempus ex. Quisque vestibulum arcu at quam venenatis pulvinar. Vivamus nec neque nisl. Nam vestibulum mattis gravida. 
+                            <img src="/images/favicon.png" alt="informationen">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="formular-fields">
+                            <label for="lname" >Titel/Nachname:</label>
+                            <input type="text" id="lname" name="lname" required>
+                        </td>
+                        <td class="info-fields">
+                            <img src="/images/favicon.png" alt="informationen">
                         </td>
                     </tr>
                     <tr>
                         <tr>
                         <td class="formular-fields">
                             <label for="bdate" >Geburtstag:</label>
-                            <input type="date" id="bdate" name="bdate">
+                            <input type="date" id="bdate" name="bdate" required>
                         </td>
                         <td class="info-fields">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent a tristique libero, et tempus ex. Quisque vestibulum arcu at quam venenatis pulvinar. Vivamus nec neque nisl. Nam vestibulum mattis gravida. 
-                        </td>
-                    </tr>
-                    <tr>
-                        
-                        <td class="formular-fields">
-                            <label for="bdate" >Geburtstag:</label>
-                            <input type="date" id="bdate" name="bdate">
-                        </td>
-                        <td class="info-fields">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent a tristique libero, et tempus ex. Quisque vestibulum arcu at quam venenatis pulvinar. Vivamus nec neque nisl. Nam vestibulum mattis gravida. 
+                            <img src="/images/favicon.png" alt="informationen">
                         </td>
                     </tr>
                 </table>
