Edit cookie text

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p>
           We use cookies in this website to give you the best experience possible
           and show you relevant ads. To find out more, read our
-          <a href="#">privacy policy</a> and <a href="#">cookie policy</a>.
+          <a href="#">privacy policy</a>.
         </p>
   
         <button class="cookie-btn">
