--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF8">
     <!-- Here we set the width of the page to fit the width of the device -->
     <link rel="stylesheet" href="css/main.css">
-    <title>GEZ-Hilfe</title>
+    <title>GEZ-Help</title>
 
 </head>
 
