Privacy policy style

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- Html language attribute, default is english -->
-<html lang="de">
+<html lang="en">
 
 <head>
     <!-- What charset to use in our HTML file, UTF-8 is best -->
