--- a/localized_pages/German/index.html
+++ b/localized_pages/German/index.html
@@ -23,7 +23,12 @@
                             <input type="radio" id="female" name="gender" value="Frau"> 
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                 <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                 </span>
+                            </div>
                         </td>
                     </tr>
                     <tr>
@@ -32,7 +37,12 @@
                             <input type="text" id="fname" name="fname"  required>
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                    <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                    </span>
+                                </div>
                         </td>
                     </tr>
                     <tr>
@@ -41,7 +51,12 @@
                             <input type="text" id="lname" name="lname" required>
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                    <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                    </span>
+                                </div>
                         </td>
                     </tr>
                     <tr>
@@ -51,7 +66,12 @@
                             <input type="date" id="bdate" name="bdate" required>
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                    <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                    </span>
+                                </div>
                         </td>
                     </tr>
                 </table>
