--- a/localized_pages/German/anmeldung.html
+++ b/localized_pages/German/anmeldung.html
@@ -21,7 +21,12 @@
                         <input typ="date" id="anmeldung_zum" name="anmledung_zum" required>
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                 <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                 </span>
+                            </div>
                         </td>
                     </tr>
                     <tr>
@@ -30,7 +35,12 @@
                             <input type="text" id="street" name="street" required>
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                 <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                 </span>
+                            </div>
                         </td>
                     </tr>
                     <tr>
@@ -39,7 +49,12 @@
                             <input type="text" id="home_nr" name="home_nr" required>
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                 <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                 </span>
+                            </div>
                         </td>
                     </tr>
                     <tr>
@@ -49,7 +64,12 @@
                             <input type="text" id="adress_additions" name="adress_additions" required>
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                 <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                 </span>
+                            </div>
                         </td>
                     </tr>
                     <tr>
@@ -59,7 +79,12 @@
                             <input type="number" id="area_code" name="area_code" required>
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                 <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                 </span>
+                            </div>
                         </td>
                     </tr>
                     <tr>
@@ -69,7 +94,12 @@
                             <input type="text" id="area" name="area" required>
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                 <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                 </span>
+                            </div>
                         </td>
                     </tr>
                     <tr>
@@ -79,7 +109,12 @@
                             <input type="tel" id="phone_number" name="phone_number">
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                 <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                 </span>
+                            </div>
                         </td>
                     </tr>
 
