--- a/localized_pages/German/sepa.html
+++ b/localized_pages/German/sepa.html
@@ -24,7 +24,12 @@
                             <input type="radio" id="female" name="gender" value="Frau"> 
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                 <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                 </span>
+                            </div>
                         </td>
                     </tr>
                     <tr>
@@ -33,7 +38,12 @@
                             <input type="text" id="fname" name="fname"  required>
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                 <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                 </span>
+                            </div>
                         </td>
                     </tr>
                     <tr>
@@ -42,7 +52,12 @@
                             <input type="text" id="lname" name="lname" required>
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                 <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                 </span>
+                            </div>
                         </td>
                     </tr>
                     <tr>
@@ -52,7 +67,12 @@
                             <input type="date" id="bdate" name="bdate" required>
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                 <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                 </span>
+                            </div>
                         </td>
                     </tr>
                 </table>
