--- a/localized_pages/German/zahlungsmoeglichkeit.html
+++ b/localized_pages/German/zahlungsmoeglichkeit.html
@@ -30,7 +30,12 @@
                             <input type="radio" id="12-months-before" name="12-months-before" value="4"><br>
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                 <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                 </span>
+                            </div>
                         </td>
                     </tr>
                     <tr>
@@ -41,7 +46,12 @@
                             <input type="radio" id="bank_transfer" name="bank_transfer" value="2"><br>
                         </td>
                         <td class="info-fields">
-                            <img src="/images/favicon.png" alt="informationen">
+                            <div class="info-button">
+                                <img src="/images/favicon.png" alt="informationen">
+                                 <span class="extra-info">   
+                                        Weitere Informationen werden noch hinzugefügt
+                                 </span>
+                            </div>
                         </td>
                     </tr>
                 </table>
