--- a/localized_pages/German/anmeldung.html
+++ b/localized_pages/German/anmeldung.html
@@ -10,7 +10,7 @@
         <div class="pers-fields">
             <form action="">
                 <table>
-                    <h2>2.Anmeldung</h2>
+                    <h2>2. Anmeldung</h2>
                     <tr>
                         <th>Feld:</th>
                         <th>Kurze Erklärung</th>
@@ -24,7 +24,7 @@
                             <div class="info-button">
                                 <img src="/images/favicon.png" alt="informationen">
                                  <span class="extra-info">   
-                                        Weitere Informationen werden noch hinzugefügt
+                                        Geben Sie den Monat und das Jahr an, zu welchem Sie sich bei ihrer neuen Adresse angemeldet haben.
                                  </span>
                             </div>
                         </td>
@@ -38,21 +38,21 @@
                             <div class="info-button">
                                 <img src="/images/favicon.png" alt="informationen">
                                  <span class="extra-info">   
-                                        Weitere Informationen werden noch hinzugefügt
+                                        Geben Sie die Straße an in der Sie wohnen. Beispiel: Musterstraße, Musterweg
                                  </span>
                             </div>
                         </td>
                     </tr>
                     <tr>
                         <td class="formular-fields">
-                            <label for="home_nr" >Hausnummer.:</label>
+                            <label for="home_nr" >Hausnummer:</label>
                             <input type="text" id="home_nr" name="home_nr" required>
                         </td>
                         <td class="info-fields">
                             <div class="info-button">
                                 <img src="/images/favicon.png" alt="informationen">
                                  <span class="extra-info">   
-                                        Weitere Informationen werden noch hinzugefügt
+                                        Geben Sie die Nummer ihres Hauses an. Beispiele: 11, 11a, 35
                                  </span>
                             </div>
                         </td>
@@ -67,7 +67,7 @@
                             <div class="info-button">
                                 <img src="/images/favicon.png" alt="informationen">
                                  <span class="extra-info">   
-                                        Weitere Informationen werden noch hinzugefügt
+                                        Geben Sie weitere Informationen zu ihrer Adresse an. Beispiel: Wohnungs-Nr., Hinterhaus rechts
                                  </span>
                             </div>
                         </td>
@@ -82,7 +82,7 @@
                             <div class="info-button">
                                 <img src="/images/favicon.png" alt="informationen">
                                  <span class="extra-info">   
-                                        Weitere Informationen werden noch hinzugefügt
+                                        Geben Sie die Postleihzahl ihres Ortes an. Beispiel: 68219 Mannheim -> 68219
                                  </span>
                             </div>
                         </td>
@@ -97,7 +97,7 @@
                             <div class="info-button">
                                 <img src="/images/favicon.png" alt="informationen">
                                  <span class="extra-info">   
-                                        Weitere Informationen werden noch hinzugefügt
+                                        Geben Sie den Namen ihres Wohnortes an. Beispiel: 68219 Mannheim -> Mannheim
                                  </span>
                             </div>
                         </td>
@@ -105,14 +105,14 @@
                     <tr>
                         <tr>
                         <td class="formular-fields">
-                            <label for="phone_number" >Ort:</label>
+                            <label for="phone_number" >Telefonnummer: (freiwillige Angabe)</label>
                             <input type="tel" id="phone_number" name="phone_number">
                         </td>
                         <td class="info-fields">
                             <div class="info-button">
                                 <img src="/images/favicon.png" alt="informationen">
                                  <span class="extra-info">   
-                                        Weitere Informationen werden noch hinzugefügt
+                                        Falls es Rückfragen gibt, kann man Sie über diese Telefonnummer erreichen. Beispiel: +49 176 555555555
                                  </span>
                             </div>
                         </td>
