--- a/localized_pages/German/index.html
+++ b/localized_pages/German/index.html
@@ -10,7 +10,7 @@
         <div class="pers-fields">
             <form action="">
                 <table>
-                    <h2>1.Allgemeine Angaben</h2>
+                    <h2>1. Allgemeine Angaben</h2>
                     <tr>
                         <th>Feld:</th>
                         <th>Kurze Erklärung</th>
@@ -26,7 +26,7 @@
                             <div class="info-button">
                                 <img src="/images/favicon.png" alt="informationen">
                                  <span class="extra-info">   
-                                        Weitere Informationen werden noch hinzugefügt
+                                        Geben Sie an, mit welchem Geschlecht Sie sich Identifizieren.
                                  </span>
                             </div>
                         </td>
@@ -40,7 +40,7 @@
                             <div class="info-button">
                                 <img src="/images/favicon.png" alt="informationen">
                                     <span class="extra-info">   
-                                        Weitere Informationen werden noch hinzugefügt
+                                        Geben Sie ihren Vornamen an. Beispiel: Max von Mustermann -> Max
                                     </span>
                                 </div>
                         </td>
@@ -54,7 +54,7 @@
                             <div class="info-button">
                                 <img src="/images/favicon.png" alt="informationen">
                                     <span class="extra-info">   
-                                        Weitere Informationen werden noch hinzugefügt
+                                        Geben Sie ihren Nachnamen mit evtl. Titel an. Beispiel: Max von Mustermann -> von Mustermann
                                     </span>
                                 </div>
                         </td>
@@ -69,7 +69,7 @@
                             <div class="info-button">
                                 <img src="/images/favicon.png" alt="informationen">
                                     <span class="extra-info">   
-                                        Weitere Informationen werden noch hinzugefügt
+                                        Geben Sie ihr Geburtsdatum an. Dies muss mit ihrem Geburtstag auf ihrem Ausweis übereinstimmen.
                                     </span>
                                 </div>
                         </td>
