--- a/localized_pages/German/zahlungsmoeglichkeit.html
+++ b/localized_pages/German/zahlungsmoeglichkeit.html
@@ -10,7 +10,7 @@
         <div class="pers-fields">
             <form action="">
                 <table>
-                    <h2>1.Allgemeine Angaben</h2>
+                    <h2>4. Angaben zur Zahlungsweise</h2>
                     <tr>
                         <th>Feld:</th>
                         <th>Kurze Erklärung</th>
