--- a/css/about us.html
+++ b/css/about us.html
@@ -25,24 +25,38 @@
         Our teammembers are: 
     </h2>
     <p class = "boxed">
-        <img src="images\Profil 1.png" class ="image"> <br>First member is Georgy Haydukov, a  who is responsible for 
+        <img src="/images/Profil 1.png" class ="image"> <br>First member is Georgy Haydukov, a  who is responsible for 
                                                                                         the cookies and our privacy policies. You can reach him under his email: <a href= "11@stud.hs-mannheim.de">11@stud.hs-mannheim.de</a>
     </p>
+    <br>
+    <br>
+    <br>
     <p class= "boxed">
-        <img src="images\Profil 2.png" class ="image"> <br>Furthermore we have Aleksandar Histrov, our Flask specialist and bulgarian translator. You can reach him under his email: <a href= "12@stud.hs-mannheim.de">12@stud.hs-mannheim.de</a>
-    </p>
-    <p class="boxed">
-        <img src="images\Profil 3.png" class ="image"> <br>This is Robert Endler who works not only on our imprint, but also on our french translation. You can reach him under his email: <a href= "13@stud.hs-mannheim.de">13@stud.hs-mannheim.de</a>
+        <img src="/images/Profil 2.png" class ="image"> <br>Furthermore we have Aleksandar Histrov, our Flask specialist and bulgarian translator. You can reach him under his email: <a href= "12@stud.hs-mannheim.de">12@stud.hs-mannheim.de</a>
     </p>
     <br>
+    <br>
+    <br>
     <p class="boxed">
-        <img src="images\Profil 4.png" class ="image"> <br>Here is Ilyas Bal who is working on our tutorials and explanations for your future documents. You can reach him under his email: <a href= "14@stud.hs-mannheim.de">14@stud.hs-mannheim.de</a>
+        <img src="/images/Profil 3.png" class ="image"> <br>This is Robert Endler who works not only on our imprint, but also on our french translation. You can reach him under his email: <a href= "13@stud.hs-mannheim.de">13@stud.hs-mannheim.de</a>
     </p>
+    <br>
+    <br>
+    <br>
     <p class="boxed">
-        <img src="images\profil 5.png" class ="image"> <br>Lennart Gulde is also working on our tutorials and helping out on our loginsystem. You can reach him under his email: <a href= "15@stud.hs-mannheim.de">15@stud.hs-mannheim.de</a>
+        <img src="/images/Profil 4.png" class ="image"> <br>Here is Ilyas Bal who is working on our tutorials and explanations for your future documents. You can reach him under his email: <a href= "14@stud.hs-mannheim.de">14@stud.hs-mannheim.de</a>
     </p>
+    <br>
+    <br>
+    <br>
     <p class="boxed">
-        <img src="images\profil 6.png" class ="image" > <br>Finally here is Muhammed Yavuz, who is responsible for the information you are reading right now! Moreover he works on the login, just as on the menu. You can reach him under his email: <a href= "16@stud.hs-mannheim.de">16@stud.hs-mannheim.de</a>
+        <img src="/images/profil 5.png" class ="image"> <br>Lennart Gulde is also working on our tutorials and helping out on our loginsystem. You can reach him under his email: <a href= "15@stud.hs-mannheim.de">15@stud.hs-mannheim.de</a>
+    </p>
+    <br>
+    <br>
+    <br>
+    <p class="boxed">
+        <img src="/images/profil 6.png" class ="image" > <br>Finally here is Muhammed Yavuz, who is responsible for the information you are reading right now! Moreover he works on the login, just as on the menu. You can reach him under his email: <a href= "16@stud.hs-mannheim.de">16@stud.hs-mannheim.de</a>
     </p>
 
     <p id="finalsentence">
