--- a/localized_pages/English/about_us.html
+++ b/localized_pages/English/about_us.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <link rel=stylesheet href="about us css.css">
+    <link rel=stylesheet href="about_us.css">
     <title>About us</title>
 </head>
 <body>
